Issue #11 Removed commons-codec; using javax.xml.bind.DataTypeConverter